bracketapp/static/css/src/nb-components/nb-countdown.css
nb-countdown {
  --default-card-bg-color: light-dark(
    var(--wa-color-red-90),
    var(--wa-color-red-10)
  );
  --default-card-border-color: light-dark(
    var(--wa-color-red-90),
    var(--wa-color-red-10)
  );

  --nested-card-bg-color: light-dark(
    var(--wa-color-red-70),
    var(--wa-color-red-30)
  );
  --nested-card-border-color: light-dark(
    var(--wa-color-red-70),
    var(--wa-color-red-30)
  );

  &[type="timeToOpen"] {
    --default-card-bg-color: light-dark(
      var(--wa-color-blue-90),
      var(--wa-color-blue-10)
    );
    --default-card-border-color: light-dark(
      var(--wa-color-blue-90),
      var(--wa-color-blue-10)
    );

    --nested-card-bg-color: light-dark(
      var(--wa-color-blue-70),
      var(--wa-color-blue-30)
    );
    --nested-card-border-color: light-dark(
      var(--wa-color-blue-70),
      var(--wa-color-blue-30)
    );
  }

  > wa-card {
    background-color: var(--default-card-bg-color);
    border-color: var(--default-card-border-color);
  }

  .time-card {
    background-color: var(--nested-card-bg-color);
    border-color: var(--nested-card-border-color);
    border-radius: var(--wa-border-radius-l);

    &::part(body) {
      padding: var(--wa-space-s);
    }

    > div {
      gap: var(--wa-space-xs);
    }

    span {
      font-size: var(--wa-font-size-s);
    }

    .time-value {
      font-size: var(--wa-font-size-xl);
      font-weight: var(--wa-font-weight-bold);
    }
  }

  &[size="small"] {
    .time-card {
      &::part(body) {
        padding: var(--wa-space-2xs);
      }

      > div {
        gap: 0;
      }

      span {
        font-size: var(--wa-font-size-2xs);
      }

      .time-value {
        font-size: var(--wa-font-size-m);
      }
    }
  }
}

